--- a/style.css
+++ b/style.css
@@ -251,7 +251,143 @@ a {
   line-height: 1.4;
   margin-top: 1.5vw;
 }
-
+/* -----page3--------*/
+#page3 {
+  height: 100vh;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  padding-bottom: 3vw;
+  align-items: center;
+  justify-content: center;
+  overflow: hidden;
+}
+#text {
+  height: 10%;
+  width: 100%;
+  justify-content: center;
+  display: flex;
+  align-items: start;
+}
+#text h2 {
+  font-size: 3vw;
+  line-height: 1;
+}
+#boxes {
+  height: 90%;
+  width: 100%;
+  display: flex;
+  padding: 2vw 4vw;
+  flex-wrap: nowrap;
+}
+.box {
+  width: 25%;
+  height: 100%;
+  padding: 0.5vw 1vw;
+  transition: linear 0.2s;
+  position: relative;
+}
+.imgContainer {
+  height: 100%;
+  width: 100%;
+}
+.text {
+  height: 40%;
+  width: 84%;
+  position: absolute;
+  left: 2%;
+  bottom: 1.2%;
+  display: flex;
+  gap: 1vw;
+  flex-direction: column;
+  align-items: start;
+  justify-content: end;
+  background-color: #ecf0f1;
+  display: none;
+  z-index: 3;
+  padding: 1vw 3vw;
+  transition: all 0.2s linear;
+}
+.textPart1 {
+  text-align: start;
+}
+.textPart2 {
+  transition: all 1s linear;
+}
+.textPart2 h4 {
+  margin-top: 1vw;
+  font-size: 1.2vw;
+  line-height: 1.2;
+  font-weight: 400;
+}
+.textPart3 {
+  width: fit-content;
+  background-color:#2c3e50;
+  display: flex;
+  cursor: pointer;
+  color: #ecf0f1;
+  align-items: center;
+  margin-top: 1.7vw;
+  padding: 0.5vw 1.89vw;
+  border: 1px solid #2c3e50;
+  background-color: #2c3e50;
+  transition: all 0.5s ease-out;
+}
+.textPart3 h3 {
+  text-decoration: none;
+  font-size: 1vw;
+  color: #ecf0f1;
+  font-weight: 400;
+}
+.textPart3:hover {
+  background-color: transparent;
+}
+.textPart3:hover h3 {
+  color: #2c3e50;
+}
+#box1 .textPart3 {
+  opacity: 1;
+}
+.textPart1 h2 {
+  font-size: 3vw;
+  font-weight: 600;
+  line-height: 1;
+}
+.piche h2 {
+  font-size: 3vw;
+  font-weight: 600;
+  line-height: 1.4;
+  position: absolute;
+  z-index: 0;
+  top: 70%;
+  left: 4%;
+  background-color: #ecf0f1;
+}
+.piche {
+  display: none;
+}
+#box2 .piche {
+  display: block;
+}
+#box3 .piche {
+  display: block;
+}
+.box img {
+  background-color: #2c3e50;
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
+  opacity: 0.9;
+}
+#box1 {
+  width: 50%;
+}
+#box1 .text {
+  display: block;
+}
+.text {
+  display: none;
+}
 /* -----page4------ */
 #page4 {
   height: 200vh;
@@ -430,7 +566,7 @@ footer {
   line-height: 1.25;
 }
 
-@media (max-width: 600px) {
+@media (max-width: 539px) {
   nav {
     height: 15%;
     width: 100%;
@@ -650,7 +786,143 @@ footer {
     line-height: 1.4;
     margin-top: 3.5vw;
   }
-
+  /* -----page3------ */
+  #page3 {
+    height: 100vh;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    padding-bottom: 3vw;
+    align-items: center;
+    justify-content: center;
+    overflow: hidden;
+  }
+  #text {
+    height: 10%;
+    width: 100%;
+    padding: 0 5vw;
+    justify-content: start;
+    display: flex;
+    align-items: center;
+  }
+  #text h2 {
+    font-size: 6vw;
+    line-height: 1;
+  }
+  #boxes {
+    height: 90%;
+    width: 100%;
+    display: flex;
+    gap: 4vw;
+    flex-direction: column;
+    padding: 2vw 4vw;
+    flex-wrap: nowrap;
+  }
+  .box {
+    width: 100%;
+    height: 31%;
+    padding: 0.5vw 1vw;
+    transition: linear 0.2s;
+    position: relative;
+  }
+  .imgContainer {
+    height: 100%;
+    width: 100%;
+  }
+  .text {
+    height: 40%;
+    width: 84%;
+    position: absolute;
+    left: 1%;
+    bottom: 0.1%;
+    display: flex;
+    gap: 1vw;
+    flex-direction: column;
+    align-items: start;
+    justify-content: end;
+    background-color: #ecf0f1;
+    display: block;
+    z-index: 3;
+    padding: 1vw 3vw;
+    transition: all 0.2s linear;
+  }
+  .textPart1 {
+    text-align: start;
+  }
+  .textPart2 {
+    transition: all 1s linear;
+  }
+  .textPart2 h4 {
+    margin-top: 1vw;
+    font-size: 2.1vw;
+    line-height: 1.2;
+    font-weight: 400;
+  }
+  .textPart3 {
+    width: fit-content;
+    background-color:#2c3e50;
+    display: flex;
+    cursor: pointer;
+    color: #ecf0f1;
+    align-items: center;
+    margin-top: 2vw;
+    padding: 0.7vw 3vw;
+    border: 1px solid #2c3e50;
+    background-color: #2c3e50;
+    transition: all 0.5s ease-out;
+  }
+  .textPart3 h3 {
+    text-decoration: none;
+    font-size: 2vw;
+    color: #ecf0f1;
+    font-weight: 400;
+  }
+  .textPart3:hover {
+    background-color: transparent;
+  }
+  .textPart3:hover h3 {
+    color: #2c3e50;
+  }
+  #box1 .textPart3 {
+    opacity: 1;
+  }
+  .textPart1 h2 {
+    font-size: 5.5vw;
+    font-weight: 600;
+    line-height: 1;
+  }
+  .piche h2 {
+    font-size: 5.5vw;
+    font-weight: 600;
+    line-height: 1.4;
+    position: absolute;
+    z-index: 0;
+    top: 70%;
+    left: 4%;
+    background-color: #ecf0f1;
+  }
+  .piche {
+    display: none;
+  }
+  #box2 .piche {
+    display: block;
+  }
+  #box3 .piche {
+    display: block;
+  }
+  .box img {
+    background-color: #2c3e50;
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+    opacity: 0.9;
+  }
+  #box1 {
+    width: 100%;
+  }
+  #box1 .text {
+    display: block;
+  }
   /* -----page4------ */
   #page4 {
     height: 120vh;
@@ -856,11 +1128,11 @@ footer {
     right: 8%;
     position: absolute;
   }
-  #menucross i{
+  #menucross i {
     font-size: 5.5vw;
     color: #ecf0f1;
   }
-  #menulist{
+  #menulist {
     height: 70%;
     display: flex;
     flex-direction: column;
@@ -868,15 +1140,15 @@ footer {
     width: 100%;
     padding: 30vw 5vw;
   }
-  #menulist h3{
+  #menulist h3 {
     color: #ecf0f1;
     font-size: 8vw;
     font-weight: 400;
   }
-  .menudiv{
+  .menudiv {
     transform: translateX(100%);
   }
-  #menulist a{
+  #menulist a {
     color: #ecf0f1;
     font-size: 8vw;
     font-weight: 200;
